# Changelog
All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).


## [Unreleased]


## [2.15.8] - 2024-07-24
### Fixed
- [API_PARSER] [HARFANGLAB] Truncate details_powershell.PowershellCommand to 16384 char (as logs can be up to 2M)


## [2.15.7] - 2024-07-22
### Changed
- [API_PARSER] [CROWDSTRIKE] Allow to disable fetching of 'incident' logs
### Fixed
- [API_PARSER] [GATEWATCHER_ALERTS] Avoid missing logs by setting the last_api_call the timestamp of the last retrieved log
- [API_PARSER] [NOZOMI] Some alerts were not collected - because inserted after newer alerts


## [2.15.6] - 2024-07-12
### Added
- [API_PARSER] [WAF_BARRACUDA] New API parser WAF_BARRACUDA
### Fixed
- [API_PARSER] [HARFANGLAB] Handle independent saved timestamps for 'alerts' and 'threats' logs
- [API_PARSER] [PROOFPOINT_TRAP] Avoid errors on missing 'emails' field


## [2.15.5] - 2024-06-28
### Added
- [API_PARSER] [SIGNALSCIENCES_NGWAF] Add site_name key in logs
- [API_PARSER] [GATEWATCHER_ALERTS] New collector
- [API_PARSER] [CISCO_UMBRELLA] New collector
### Fixed
- [API_PARSER] [VECTRA] Correctly allow to test the Collector before saving it
- [API_PARSER] [HARFANGLAB] Increase delay to 10 minutes to be sure to get all logs
- [AUTHENTICATION] [GUI] LDAP Users can now authenticate once activated


## [2.15.4] - 2024-05-27
### Changed
- [API_PARSER] [CYBEREASON] Update malops fetching
- [DEPENDENCIES] Python dependencies upgrade
  - gunicorn 21.2.0 -> 22.0.0
- [CLUSTER] [CONFIG] Reload all Rsyslog/Filebeat Listeners when updating the Redis cluster password
### Fixed
- [FRONTEND] Missing redis fields in template infos
- [API_PARSER] [HARFANGLAB] Increase the limit of logs in request and reduce time range of requests
- [API_PARSER] [CSC_DOMAINMANAGER] Split logs with several records