@@ -6,6 +6,8 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 
 
 ## [Unreleased]
+### Fixed
+- [API_PARSER] [HARFANGLAB] Hotfix to add a check when powershell_command object is None
 
 
 ## [2.15.8] - 2024-07-24
